[package]
name = "example_async_tokio_indicatif"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3.25"
rand = "0.8.5"
comfy-table = "6.1.3"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dependencies.tokio]
version = "^1.2"
features = [
    "full"
]

[dependencies.indicatif]
version = "^0.17"
features = ["tokio"]
